RsvgFilterPrimitiveComponentTransfer: add destructor; fix memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=761728